--- a/gb/19/11/20/n11667897.md
+++ b/gb/19/11/20/n11667897.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zxivak3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zxivak3555/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zxivak3555/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zxivak3555/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zxivak3555/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zxivak3555/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zxivak3555/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zxivak3555/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳洲保守党创始人贝尔纳迪年底退出政坛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/20191120-Chi-Jin-Cory-Bernardi-881275524-600x400.jpg" />
 <h6>澳洲保守党创始人贝尔纳迪（Cory Bernardi）。(Michael Masters/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2019年11月20日讯】（大纪元记者天睿<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E5%85%9A.md#1">保守党</a><ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E5%88%9B%E5%A7%8B%E4%BA%BA.md#1">创始人</a><ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E8%B4%9D%E5%B0%94%E7%BA%B3%E8%BF%AA.md#1">贝尔纳迪</a>（Cory Bernardi）将于今年年底<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E9%80%80%E5%87%BA%E6%94%BF%E5%9D%9B.md#1">退出政坛</a>。他相信，他退出自由党的决定在前总理特恩布尔下台的过程起到了作用，让自由党走上了胜选之路。</p>
-<p>将在本月满50岁的<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E8%B4%9D%E5%B0%94%E7%BA%B3%E8%BF%AA.md#1">贝尔纳迪</a>在2017年退出自由党并成立了<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E5%85%9A.md#1">保守党</a>，因为他当时对时任总理特恩布尔领导自由党的方式极其厌恶，并批评特恩布尔背弃了自由党建党的基础——保守价值观。</p>
-<p>在参议院奉职13年后，这位来自南澳的参议员将毫无遗憾的<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E9%80%80%E5%87%BA%E6%94%BF%E5%9D%9B.md#1">退出政坛</a>，他表示，他期待着成为史册上的一小笔。</p>
-<p>周二，贝尔纳迪对《<ahref="https://github.com/zxivak3555/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>人报》说：“我的确认为，我的离开对最终结果起到了一定作用，那就是改换领导人，赢得大选。”</p>
+<p>【大纪元2019年11月20日讯】（大纪元记者天睿<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E5%85%9A.md#1">保守党</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%88%9B%E5%A7%8B%E4%BA%BA.md#1">创始人</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%9D%E5%B0%94%E7%BA%B3%E8%BF%AA.md#1">贝尔纳迪</a>（Cory Bernardi）将于今年年底<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%80%80%E5%87%BA%E6%94%BF%E5%9D%9B.md#1">退出政坛</a>。他相信，他退出自由党的决定在前总理特恩布尔下台的过程起到了作用，让自由党走上了胜选之路。</p>
+<p>将在本月满50岁的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%9D%E5%B0%94%E7%BA%B3%E8%BF%AA.md#1">贝尔纳迪</a>在2017年退出自由党并成立了<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E5%85%9A.md#1">保守党</a>，因为他当时对时任总理特恩布尔领导自由党的方式极其厌恶，并批评特恩布尔背弃了自由党建党的基础——保守价值观。</p>
+<p>在参议院奉职13年后，这位来自南澳的参议员将毫无遗憾的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%80%80%E5%87%BA%E6%94%BF%E5%9D%9B.md#1">退出政坛</a>，他表示，他期待着成为史册上的一小笔。</p>
+<p>周二，贝尔纳迪对《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>人报》说：“我的确认为，我的离开对最终结果起到了一定作用，那就是改换领导人，赢得大选。”</p>
 <p>即使许多他的前同僚指责他背弃自由党，他对退出自由党并无遗憾。“人们会对我和我的贡献作出自己的判断，但我从未动摇过。我从来没有违背过我的道德和原则。”</p>
 <p>贝尔纳迪反对同性婚姻并对针对气候变化的政策提出批评。他表示，他并不觉得自己在这两个问题上越界，特别是对同性婚姻。“我并不认为我对任何问题做的过分，在同性婚姻的问题上，我如实表达了很多人的担忧。”他对天空新闻说。</p>
 <p>他在4个月前撤销了保守党的注册，这个羽翼未丰的政党在这次联邦大选中没有获得足够的支持。</p>
@@ -22,48 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/17/2/6/n8783757.md#1">澳洲自由党参议员贝尔纳迪被曝欲脱党自立</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/17/2/7/n8785382.md#1">南澳参议员贝尔纳迪正式宣布退出自由党</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/11/28/n10878476.md#1">参议院上出言侮辱同僚 绿党领袖被议长停职</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/3/11/n11104678.md#1">专家：中共影响澳美舆论 严重程度前所未见</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/4/3/n11159384.md#1">澳参议员吁成立皇家委员会调查中共渗透</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/6/21/n11336868.md#1">自由党回归传统 澳洲保守党宣布注销其党</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/6/25/n11344684.md#1">澳洲保守党创建人排除再入自由党可能</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/6/27/n11349321.md#1">澳联盟党与中立议员磋商  望促成减税立法</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/7/3/n11361072.md#1">工党未投反对票 联盟党减税法案 众议院通过</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/31/n12368791.md#1">澳洲试驾：2020款宝马X5 油电混合动力SUV</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/2/6/n8783757.md#1">澳洲自由党参议员贝尔纳迪被曝欲脱党自立</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/2/7/n8785382.md#1">南澳参议员贝尔纳迪正式宣布退出自由党</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/28/n10878476.md#1">参议院上出言侮辱同僚 绿党领袖被议长停职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/11/n11104678.md#1">专家：中共影响澳美舆论 严重程度前所未见</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/3/n11159384.md#1">澳参议员吁成立皇家委员会调查中共渗透</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/21/n11336868.md#1">自由党回归传统 澳洲保守党宣布注销其党</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/25/n11344684.md#1">澳洲保守党创建人排除再入自由党可能</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/27/n11349321.md#1">澳联盟党与中立议员磋商  望促成减税立法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/3/n11361072.md#1">工党未投反对票 联盟党减税法案 众议院通过</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680369.md#1">南澳新内阁亮相 独立议员意外入选</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/29/n10525205.md#1" target="_blank">林辉：中共“志愿军”唯一回国女战俘的遭遇</a></li><li><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/15/n11045840.md#1" target="_blank">晓明：1968年广西阳朔杀惨案回顾</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365218.md#1">3秒止痛！头痛有5大原因 中医妙招速救</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12365852.md#1">【拍案惊奇】华为猛加班抗美 中共经济死螺旋</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12366125.md#1">【新闻第一现场】王毅PS照火爆 安倍继任者？</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363644.md#1">台湾馆长中枪影片曝光 黄国昌：绝非只是警告</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12364611.md#1">专家：川普或打算于第二任期内解体中共</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/27/n12362745.md#1">台湾网红馆长陈之汉遭枪击 鲜血直流紧急送医</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/27/n12362661.md#1">福布斯中国名人榜出炉 美籍刘亦菲入选遭质疑</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365345.md#1">台湾馆长遭枪击 杜汶泽看直播喊话：要撑住</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/27/n12362438.md#1">港警篡改元朗7.21历史 众星晒黑衣照抗议</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/26/n12357679.md#1">自制6种“天然清洁剂” 难缠污垢一次搞定</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363545.md#1">不用咖啡机 在家也能冲泡好喝的拿铁咖啡</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363839.md#1">在台湾待一段时间 大陆网红赞高自由度</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/25/n12357051.md#1">【罗厨寻味】番茄炒牛肉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zxivak3555/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zxivak3555/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/20/n11667897.htm">澳洲保守党创始人贝尔纳迪年底退出政坛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/20/n11667897.htm">澳洲保守党创始人贝尔纳迪年底退出政坛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/zxivak3555/djy/blob/master/gb/19/11/20/n11667897.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zxivak3555/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zxivak3555/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zxivak3555/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zxivak3555/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zxivak3555/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/11/20/n11667897.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
